# moeplay-tauri

./: .gitignore  ANDROID_FIX_HANDOFF.md  ANDROID_HANDOFF.md  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  index-sme.json  index.html  overview.md  package-lock.json  package.json  playwright.config.ts  progress-audit.md  reasonix.toml  run-build.ps1  tsconfig.json  vite.config.ts  vitest.config.ts
plugins/tauri-plugin-orientation/: Cargo.toml  build.rs
plugins/tauri-plugin-orientation/android/: build.gradle.kts
plugins/tauri-plugin-orientation/permissions/: default.toml
plugins/tauri-plugin-orientation/src/: lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json  sensitive.json
src-tauri/examples/: moe-migrate.rs
src-tauri/permissions/autogenerated/: add_game_alias.toml  add_game_backup.toml  add_game_by_dialog.toml  add_game_by_path.toml  add_screenshot.toml  add_simple_tag.toml  add_tag_entry.toml  add_watch_dir.toml  ai_changes_apply.toml  ai_changes_preview.toml  ai_changes_undo.toml  ai_v2_budget_status.toml  ai_v2_cancel_task.toml  ai_v2_provider_status.toml  ai_v2_start_structured_task.toml  ai_v2_task_result.toml  ai_v2_task_status.toml  anime_add_rule.toml  anime_bangumi_calendar.toml  anime_bangumi_characters.toml  anime_bangumi_comments.toml  anime_bangumi_detail.toml  anime_bangumi_episode_comments.toml  anime_bangumi_episodes_list.toml  anime_bangumi_get_all_collections.toml  anime_bangumi_get_user_collection.toml  anime_bangumi_get_username.toml  anime_bangumi_persons.toml  anime_bangumi_rating.toml  anime_bangumi_search.toml  anime_bangumi_update_collection.toml  anime_build_url.toml  anime_cancel_download.toml  anime_clear_finished_downloads.toml  anime_danmaku_get_comments.toml  anime_danmaku_get_episodes.toml  anime_danmaku_search.toml  anime_download_episode.toml  anime_extract_video_url.toml  anime_fetch_page.toml  (+307 more)
src-tauri/src/: anime.rs  anime_download.rs  archive.rs  auto_scrape.rs  autostart.rs  cloud_save.rs  comic.rs  csharp_migration.rs  db.rs  db_sqlite.rs  diagnostics.rs  downloader.rs  emulator.rs  extension_index.rs  external_player.rs  gal_download.rs  http_client.rs  image_scanner.rs  import.rs  integration.rs  lib.rs  locale.rs  logging.rs  main.rs  migration.rs  models.rs  nsfw.rs  performance.rs  process_monitor.rs  recommender.rs  resource_fetcher.rs  secret_store.rs  security.rs  source_center.rs  source_selection.rs  stats.rs  steam_openid.rs  steam_openid_mobile.rs  sync.rs  sync_envelope.rs  (+6 more)
src-tauri/src/ai/: change_set.rs  contracts.rs  endpoint.rs  error.rs  governance.rs  mod.rs  ollama.rs  openai_compatible.rs  orchestrator.rs  prompts.rs  provider.rs  redaction.rs  schema.rs  transport.rs
src-tauri/src/commands/: activity.rs  ai_changes.rs  ai_v2.rs  anime.rs  anime_provider.rs  cloud.rs  comic.rs  comic_provider.rs  dashboard.rs  data.rs  diagnostics.rs  download.rs  emulators.rs  extension_index.rs  games.rs  import.rs  library_v2.rs  manga.rs  media.rs  metadata.rs  migration.rs  mod.rs  novel.rs  platform.rs  play.rs  privacy.rs  resources.rs  runtime.rs  saves.rs  scrape.rs  screenshots.rs  secrets.rs  settings.rs  sources.rs  sync_envelope.rs  system.rs  tasks.rs  translation.rs  wallpaper.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/repositories/: activity.rs  ai_results.rs  jobs.rs  mod.rs  progress.rs  provider_config.rs  provider_health.rs
src-tauri/src/scraper/: ai.rs  ai_presets.rs  bangumi.rs  mod.rs  (+15 more)
src-tauri/tests/: ai_changes_apply_undo.rs  ai_changes_commands.rs  ai_execution_contract.rs  ai_gateway_contract.rs  ai_v2_command_contract.rs  anime_provider_contract.rs  comic_provider_contract.rs  db_recovery.rs  domain_contract.rs  live_anime.rs  secret_store.rs  source_center_contract.rs  stats_contract.rs  task_observability_contract.rs  utils_tests.rs
(+679 files in other folders)
