[package]
name = "moeplay"
version = "0.19.3"
description = "萌游 MoeGame — 游戏与番剧管理器"
authors = ["MoeGame Dev"]
edition = "2021"
autobins = false
default-run = "moeplay"

[lib]
name = "moeplay_lib"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "moeplay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-orientation = { path = "../plugins/tauri-plugin-orientation" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
ureq = "2"
futures-util = "0.3"
log = "0.4"
zip = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
open = "5"
urlencoding = "2"
regex = "1"
encoding_rs = "0.8"
notify = "6"
thiserror = "2.0.18"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
sysinfo = "0.33"
url = "2"
serde_yaml = "0.9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
keyring = { version = "=4.1.4", default-features = false, features = ["v1"] }
scraper = "0.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "1.0.0"
keyring-core = "1.0.0"
# Must stay on the same release as the copy pulled in by
# android-native-keyring-store so both crates share one global context slot.
ndk-context = "0.1.1"
