[package]
name = "tauri-plugin-orientation"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-orientation"
license = "MIT OR Apache-2.0"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }